fixed name bug on mobile

--- a/UpdatedPortfolio/src/css/Header.css
+++ b/UpdatedPortfolio/src/css/Header.css
@@ -4,7 +4,6 @@ h1.Name {
 
     padding: 24px;
     font-size: 30px;
-    border-radius: 10px;
 
 }
 
@@ -65,6 +64,13 @@ a.active {
 @media only screen 
   and (min-width: 300px) 
   and (max-width: 812px) {
+
+    h1.Name {
+
+        padding: 10px;
+        font-size: 25px;
+    
+    }
 
     .Title a {
         font-size: 17px;
